test/files/neg/t7473.check
t7473.scala:5: error: '<-' expected but '=' found.
  for (x = Option(i); if x == j) yield 42  //t7473.scala:4: error: '<-' expected but '=' found.
         ^
t7473.scala:5: error: illegal start of simple expression
  for (x = Option(i); if x == j) yield 42  //t7473.scala:4: error: '<-' expected but '=' found.
                    ^
t7473.scala:8: error: '<-' expected but '=' found.
  (for (x = Option(i); if x == j) yield 42) toList
          ^
t7473.scala:8: error: illegal start of simple expression
  (for (x = Option(i); if x == j) yield 42) toList
                     ^
four errors found
